inputmagic.css
.im-input {
	font-family:Arial, Helvetica, sans-serif;
	position:inline-block;
	border-radius:3px;
	height:25px;
	line-height:25px;
	box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.25);
 	border:1px solid #bbb;
}

input.im-input {
	height:27px;
}

.im-inline-block {
	display:inline-block;
}

div.im-tagmultiselect-tag {
	margin-top:4px;
  position: relative;
  margin-left: 3px;
  background-color: #dedede;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 3px;
  line-height: 18px;
}

div.im-tagmultiselect-autocomplete {
  max-height: 200px;
  overflow-y: scroll;
	display:none;
	position:absolute;
	background-color:white;
	width:200px;
	min-height:10px;
	border:1px solid #bbb;
}

div.im-tagmultiselect-autocomplete div.im-tagmultiselect-option {
	padding-left:3px;
}

div.im-tagmultiselect-autocomplete div.im-tagmultiselect-option:hover {
	background-color:#DEF;
	cursor:default;
}

div.im-tagmultiselect-autocomplete div.im-tagmultiselect-option.im-selected {
	background-color:#B5D2EF;
}


div.im-tagmultiselect-tagclose {
	top:-1px;
	position:relative;
	font-size:12px;
	margin-left:3px;
	padding-left:2px;
	width:8px;
	height:10px;
	border-radius:5px;
	line-height:8px;
	color:#888;
	background-color:#f7f7f7;
}

div.im-tagmultiselect-tagclose:hover{
	cursor:pointer;
}

div.im-input {
	-moz-user-select: -moz-none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

div.im-input.focused {
	box-shadow: inset 0px 1px 2px 0px rgba(0,0,0,0.25),0px 0px 5px -1px rgba(0,115,255,1);
}

div.im-tagmultiselect-sizer {
	z-index:-1;
	position:absolute;
	display:none;
}

input.im-tagmultiselect-input {
	width:10px;
	margin-left:3px;
}

.im-input:focus {
	outline-width: 0;
}

div.im-select-container {
	font-size:13px;
	position:relative;
	background-color:white;
}

div.im-tagmultiselect-container {
	font-size:13px;
	position:relative;
	background-color:white;
}

input.im-tagmultiselect-input {
	margin-top:4px;
	outline-width: 0;
	border:none;
}

div.im-tagmultiselect-container:hover {
	cursor:text;
}

div.im-select-container:hover {
	cursor:default;
}

span.im-select-selection {
 	padding-left:3px;
}

span.im-select-caret {
	float:right;
	font-size:13px;
	margin-right:5px;
}

div.im-select-options {
	left:-1px;
	position:absolute;
	background-color:white;
 	border:1px solid #bbb;
}

div.im-select-options div.im-selected {
	background-color:#B5D2EF;
}

div.im-select-option {
	padding-left:3px;
	width:'100%';
	border-radius:3px;
	height:'16px';
}

div.im-select-option span {
	display:inline-block;
}

div.im-select-option:hover {
	background-color:#DEF;
}

